deploy: 7017b567b545bc48be4275bf41eb5996465d4aaf

--- a/lib_BoundCluster.js.html
+++ b/lib_BoundCluster.js.html
@@ -75,7 +75,7 @@
 
     
 
-    <h3>Classes</h3><ul><li id="BoundCluster-nav"><a href="BoundCluster.html">BoundCluster</a><ul class='methods'><li data-type="method" id="BoundCluster-discoverAttributes-nav"><a href="BoundCluster.html#discoverAttributes">discoverAttributes</a></li><li data-type="method" id="BoundCluster-discoverAttributesExtended-nav"><a href="BoundCluster.html#discoverAttributesExtended">discoverAttributesExtended</a></li><li data-type="method" id="BoundCluster-discoverCommandsGenerated-nav"><a href="BoundCluster.html#discoverCommandsGenerated">discoverCommandsGenerated</a></li><li data-type="method" id="BoundCluster-discoverCommandsReceived-nav"><a href="BoundCluster.html#discoverCommandsReceived">discoverCommandsReceived</a></li><li data-type="method" id="BoundCluster-readAttributes-nav"><a href="BoundCluster.html#readAttributes">readAttributes</a></li><li data-type="method" id="BoundCluster-writeAttributes-nav"><a href="BoundCluster.html#writeAttributes">writeAttributes</a></li></ul></li><li id="Cluster-nav"><a href="Cluster.html">Cluster</a><ul class='methods'><li data-type="method" id="Cluster-addCluster-nav"><a href="Cluster.html#.addCluster">addCluster</a></li><li data-type="method" id="Cluster-getCluster-nav"><a href="Cluster.html#.getCluster">getCluster</a></li><li data-type="method" id="Cluster-removeCluster-nav"><a href="Cluster.html#.removeCluster">removeCluster</a></li><li data-type="method" id="Cluster-configureReporting-nav"><a href="Cluster.html#configureReporting">configureReporting</a></li><li data-type="method" id="Cluster-discoverAttributes-nav"><a href="Cluster.html#discoverAttributes">discoverAttributes</a></li><li data-type="method" id="Cluster-discoverAttributesExtended-nav"><a href="Cluster.html#discoverAttributesExtended">discoverAttributesExtended</a></li><li data-type="method" id="Cluster-discoverCommandsGenerated-nav"><a href="Cluster.html#discoverCommandsGenerated">discoverCommandsGenerated</a></li><li data-type="method" id="Cluster-discoverCommandsReceived-nav"><a href="Cluster.html#discoverCommandsReceived">discoverCommandsReceived</a></li><li data-type="method" id="Cluster-readAttributes-nav"><a href="Cluster.html#readAttributes">readAttributes</a></li><li data-type="method" id="Cluster-readReportingConfiguration-nav"><a href="Cluster.html#readReportingConfiguration">readReportingConfiguration</a></li><li data-type="method" id="Cluster-writeAttributes-nav"><a href="Cluster.html#writeAttributes">writeAttributes</a></li></ul></li><li id="Endpoint-nav"><a href="Endpoint.html">Endpoint</a><ul class='methods'><li data-type="method" id="Endpoint-bind-nav"><a href="Endpoint.html#bind">bind</a></li><li data-type="method" id="Endpoint-unbind-nav"><a href="Endpoint.html#unbind">unbind</a></li></ul></li><li id="Node-nav"><a href="ZCLNode.html">Node</a></li></ul><h3 id="global-nav">Global</h3><ul><li><a href="global.html#debug">debug</a></li></ul>
+    <h3>Classes</h3><ul><li id="BoundCluster-nav"><a href="BoundCluster.html">BoundCluster</a><ul class='methods'><li data-type="method" id="BoundCluster-discoverAttributes-nav"><a href="BoundCluster.html#discoverAttributes">discoverAttributes</a></li><li data-type="method" id="BoundCluster-discoverAttributesExtended-nav"><a href="BoundCluster.html#discoverAttributesExtended">discoverAttributesExtended</a></li><li data-type="method" id="BoundCluster-discoverCommandsGenerated-nav"><a href="BoundCluster.html#discoverCommandsGenerated">discoverCommandsGenerated</a></li><li data-type="method" id="BoundCluster-discoverCommandsReceived-nav"><a href="BoundCluster.html#discoverCommandsReceived">discoverCommandsReceived</a></li><li data-type="method" id="BoundCluster-readAttributes-nav"><a href="BoundCluster.html#readAttributes">readAttributes</a></li><li data-type="method" id="BoundCluster-writeAttributes-nav"><a href="BoundCluster.html#writeAttributes">writeAttributes</a></li></ul></li><li id="Cluster-nav"><a href="Cluster.html">Cluster</a><ul class='methods'><li data-type="method" id="Cluster-addCluster-nav"><a href="Cluster.html#.addCluster">addCluster</a></li><li data-type="method" id="Cluster-getCluster-nav"><a href="Cluster.html#.getCluster">getCluster</a></li><li data-type="method" id="Cluster-removeCluster-nav"><a href="Cluster.html#.removeCluster">removeCluster</a></li><li data-type="method" id="Cluster-configureReporting-nav"><a href="Cluster.html#configureReporting">configureReporting</a></li><li data-type="method" id="Cluster-discoverAttributes-nav"><a href="Cluster.html#discoverAttributes">discoverAttributes</a></li><li data-type="method" id="Cluster-discoverAttributesExtended-nav"><a href="Cluster.html#discoverAttributesExtended">discoverAttributesExtended</a></li><li data-type="method" id="Cluster-discoverCommandsGenerated-nav"><a href="Cluster.html#discoverCommandsGenerated">discoverCommandsGenerated</a></li><li data-type="method" id="Cluster-discoverCommandsReceived-nav"><a href="Cluster.html#discoverCommandsReceived">discoverCommandsReceived</a></li><li data-type="method" id="Cluster-readAttributes-nav"><a href="Cluster.html#readAttributes">readAttributes</a></li><li data-type="method" id="Cluster-readReportingConfiguration-nav"><a href="Cluster.html#readReportingConfiguration">readReportingConfiguration</a></li><li data-type="method" id="Cluster-writeAttributes-nav"><a href="Cluster.html#writeAttributes">writeAttributes</a></li></ul></li><li id="Endpoint-nav"><a href="Endpoint.html">Endpoint</a><ul class='methods'><li data-type="method" id="Endpoint-bind-nav"><a href="Endpoint.html#bind">bind</a></li><li data-type="method" id="Endpoint-getLogId-nav"><a href="Endpoint.html#getLogId">getLogId</a></li><li data-type="method" id="Endpoint-unbind-nav"><a href="Endpoint.html#unbind">unbind</a></li></ul></li><li id="Node-nav"><a href="ZCLNode.html">Node</a><ul class='methods'><li data-type="method" id="Node-getLogId-nav"><a href="ZCLNode.html#getLogId">getLogId</a></li></ul></li></ul><h3 id="global-nav">Global</h3><ul><li><a href="global.html#debug">debug</a></li></ul>
   </nav>
 
   <div id="main">
@@ -92,9 +92,9 @@
   <article>
     <pre class="prettyprint source linenums"><code>'use strict';
 
-const { ZCLDataType } = require('./zclTypes');
-const { getPropertyDescriptor } = require('./util');
 let { debug } = require('./util');
+const { ZCLDataType } = require('./zclTypes');
+const { getLogId, getPropertyDescriptor } = require('./util');
 
 debug = debug.extend('bound-cluster');
 
@@ -125,6 +125,14 @@ class BoundCluster {
   }
 
   /**
+   * Returns log id string for this bound cluster.
+   * @returns {string}
+   */
+  get logId() {
+    return getLogId(this.endpoint, this.cluster.NAME, this.cluster.ID);
+  }
+
+  /**
    * This method handles an incoming `readAttributes` command send from the remote node
    * to the controller. It assembles attribute values by reading `this[attr.name]` for all
    * supported attributes of this cluster and sends the response to the remote node.
@@ -133,7 +141,7 @@ class BoundCluster {
    * @returns {Promise&lt;{attributes: Buffer}>}
    */
   async readAttributes({ attributes }) {
-    debug(this.cluster.NAME, 'received read attributes command');
+    debug(this.logId, 'received read attributes command');
     const result = Buffer.alloc(255);
     const attributeMap = attributes
       .map(aId => {
@@ -150,7 +158,7 @@ class BoundCluster {
             value,
           };
         } catch (e) {
-          debug('Failed to parse attribute:', attr ? attr.name || aId : aId, e.message);
+          debug(this.logId, 'Failed to parse attribute:', attr ? attr.name || aId : aId, e.message);
         }
 
         return {
@@ -161,7 +169,7 @@ class BoundCluster {
 
     const len = this.cluster.attributeArrayStatusDataType.toBuffer(result, attributeMap, 0);
     const attributesResult = { attributes: result.slice(0, len) };
-    debug(this.cluster.NAME, 'return read attributes response', attributesResult);
+    debug(this.logId, 'return read attributes response', attributesResult);
     return attributesResult;
   }
 
@@ -174,7 +182,7 @@ class BoundCluster {
    * @returns {Promise&lt;{attributes}>}
    */
   async writeAttributes({ attributes } = {}) {
-    debug(this.cluster.NAME, 'received write attributes command', attributes);
+    debug(this.logId, 'received write attributes command', attributes);
     attributes = this.cluster.attributeArrayDataType.fromBuffer(attributes, 0);
 
     const attributeMap = attributes
@@ -195,7 +203,7 @@ class BoundCluster {
             status: 'SUCCESS',
           };
         } catch (e) {
-          debug('Error: failed to parse attribute:', attr ? attr.name || attrValue.id : attrValue.id, e.message);
+          debug(this.logId, 'Error: failed to parse attribute:', attr ? attr.name || attrValue.id : attrValue.id, e.message);
         }
 
         return {
@@ -217,7 +225,7 @@ class BoundCluster {
    * @returns {Promise&lt;{commandIds: number[], lastResponse: boolean}>}
    */
   async discoverCommandsReceived({ startValue = 0, maxResults = 250 } = {}) {
-    debug(this.cluster.NAME, 'received discover commands received command');
+    debug(this.logId, 'received discover commands received command');
 
     const cmds = [].concat(...Object.values(this.cluster.commandsById))
       .filter(c => !c.global &amp;&amp; !c.isResponse &amp;&amp; this[c.name])
@@ -230,7 +238,7 @@ class BoundCluster {
       lastResponse: result.length === cmds.length,
       commandIds: result,
     };
-    debug(this.cluster.NAME, 'return discover commands received response', response);
+    debug(this.logId, 'return discover commands received response', response);
     return response;
   }
 
@@ -244,7 +252,7 @@ class BoundCluster {
    * @returns {Promise&lt;{commandIds: number[], lastResponse: boolean}>}
    */
   async discoverCommandsGenerated({ startValue = 0, maxResults = 250 } = {}) {
-    debug(this.cluster.NAME, 'received discover commands generated command');
+    debug(this.logId, 'received discover commands generated command');
 
     const cmds = [].concat(...Object.values(this.cluster.commandsById))
       .filter(c => !c.global &amp;&amp; c.response &amp;&amp; this[c.name])
@@ -257,7 +265,7 @@ class BoundCluster {
       lastResponse: result.length === cmds.length,
       commandIds: result,
     };
-    debug(this.cluster.NAME, 'return discover commands generated response', response);
+    debug(this.logId, 'return discover commands generated response', response);
     return response;
   }
 
@@ -290,7 +298,7 @@ class BoundCluster {
       lastResponse: true,
       attributes: attributes.map(a => ({ id: a.id, dataTypeId: a.type.id })),
     };
-    debug(this.cluster.NAME, 'received discover attributes command, response:', response);
+    debug(this.logId, 'received discover attributes command, response:', response);
     return response;
   }
 
@@ -345,7 +353,7 @@ class BoundCluster {
         };
       }),
     };
-    debug(this.cluster.NAME, 'received discover attributes extended command, response:', response);
+    debug(this.logId, 'received discover attributes extended command, response:', response);
     return response;
   }
 
@@ -375,7 +383,7 @@ class BoundCluster {
         : undefined;
 
       if (this[command.name]) {
-        debug('received command', command.name, args);
+        debug(this.logId, 'received command', command.name, args);
         const result = await this[command.name](args, meta, frame, rawFrame);
         if (command.response &amp;&amp; command.response.args) {
           // eslint-disable-next-line new-cap
