--- a/lib_Cluster.js.html
+++ b/lib_Cluster.js.html
@@ -75,7 +75,7 @@
 
     
 
-    <h3>Classes</h3><ul><li id="BoundCluster-nav"><a href="BoundCluster.html">BoundCluster</a><ul class='methods'><li data-type="method" id="BoundCluster-discoverAttributes-nav"><a href="BoundCluster.html#discoverAttributes">discoverAttributes</a></li><li data-type="method" id="BoundCluster-discoverAttributesExtended-nav"><a href="BoundCluster.html#discoverAttributesExtended">discoverAttributesExtended</a></li><li data-type="method" id="BoundCluster-discoverCommandsGenerated-nav"><a href="BoundCluster.html#discoverCommandsGenerated">discoverCommandsGenerated</a></li><li data-type="method" id="BoundCluster-discoverCommandsReceived-nav"><a href="BoundCluster.html#discoverCommandsReceived">discoverCommandsReceived</a></li><li data-type="method" id="BoundCluster-readAttributes-nav"><a href="BoundCluster.html#readAttributes">readAttributes</a></li><li data-type="method" id="BoundCluster-writeAttributes-nav"><a href="BoundCluster.html#writeAttributes">writeAttributes</a></li></ul></li><li id="Cluster-nav"><a href="Cluster.html">Cluster</a><ul class='methods'><li data-type="method" id="Cluster-addCluster-nav"><a href="Cluster.html#.addCluster">addCluster</a></li><li data-type="method" id="Cluster-getCluster-nav"><a href="Cluster.html#.getCluster">getCluster</a></li><li data-type="method" id="Cluster-removeCluster-nav"><a href="Cluster.html#.removeCluster">removeCluster</a></li><li data-type="method" id="Cluster-configureReporting-nav"><a href="Cluster.html#configureReporting">configureReporting</a></li><li data-type="method" id="Cluster-discoverAttributes-nav"><a href="Cluster.html#discoverAttributes">discoverAttributes</a></li><li data-type="method" id="Cluster-discoverAttributesExtended-nav"><a href="Cluster.html#discoverAttributesExtended">discoverAttributesExtended</a></li><li data-type="method" id="Cluster-discoverCommandsGenerated-nav"><a href="Cluster.html#discoverCommandsGenerated">discoverCommandsGenerated</a></li><li data-type="method" id="Cluster-discoverCommandsReceived-nav"><a href="Cluster.html#discoverCommandsReceived">discoverCommandsReceived</a></li><li data-type="method" id="Cluster-readAttributes-nav"><a href="Cluster.html#readAttributes">readAttributes</a></li><li data-type="method" id="Cluster-readReportingConfiguration-nav"><a href="Cluster.html#readReportingConfiguration">readReportingConfiguration</a></li><li data-type="method" id="Cluster-writeAttributes-nav"><a href="Cluster.html#writeAttributes">writeAttributes</a></li></ul></li><li id="Endpoint-nav"><a href="Endpoint.html">Endpoint</a><ul class='methods'><li data-type="method" id="Endpoint-bind-nav"><a href="Endpoint.html#bind">bind</a></li><li data-type="method" id="Endpoint-unbind-nav"><a href="Endpoint.html#unbind">unbind</a></li></ul></li><li id="Node-nav"><a href="ZCLNode.html">Node</a></li></ul><h3 id="global-nav">Global</h3><ul><li><a href="global.html#debug">debug</a></li></ul>
+    <h3>Classes</h3><ul><li id="BoundCluster-nav"><a href="BoundCluster.html">BoundCluster</a><ul class='methods'><li data-type="method" id="BoundCluster-discoverAttributes-nav"><a href="BoundCluster.html#discoverAttributes">discoverAttributes</a></li><li data-type="method" id="BoundCluster-discoverAttributesExtended-nav"><a href="BoundCluster.html#discoverAttributesExtended">discoverAttributesExtended</a></li><li data-type="method" id="BoundCluster-discoverCommandsGenerated-nav"><a href="BoundCluster.html#discoverCommandsGenerated">discoverCommandsGenerated</a></li><li data-type="method" id="BoundCluster-discoverCommandsReceived-nav"><a href="BoundCluster.html#discoverCommandsReceived">discoverCommandsReceived</a></li><li data-type="method" id="BoundCluster-readAttributes-nav"><a href="BoundCluster.html#readAttributes">readAttributes</a></li><li data-type="method" id="BoundCluster-writeAttributes-nav"><a href="BoundCluster.html#writeAttributes">writeAttributes</a></li></ul></li><li id="Cluster-nav"><a href="Cluster.html">Cluster</a><ul class='methods'><li data-type="method" id="Cluster-addCluster-nav"><a href="Cluster.html#.addCluster">addCluster</a></li><li data-type="method" id="Cluster-getCluster-nav"><a href="Cluster.html#.getCluster">getCluster</a></li><li data-type="method" id="Cluster-removeCluster-nav"><a href="Cluster.html#.removeCluster">removeCluster</a></li><li data-type="method" id="Cluster-configureReporting-nav"><a href="Cluster.html#configureReporting">configureReporting</a></li><li data-type="method" id="Cluster-discoverAttributes-nav"><a href="Cluster.html#discoverAttributes">discoverAttributes</a></li><li data-type="method" id="Cluster-discoverAttributesExtended-nav"><a href="Cluster.html#discoverAttributesExtended">discoverAttributesExtended</a></li><li data-type="method" id="Cluster-discoverCommandsGenerated-nav"><a href="Cluster.html#discoverCommandsGenerated">discoverCommandsGenerated</a></li><li data-type="method" id="Cluster-discoverCommandsReceived-nav"><a href="Cluster.html#discoverCommandsReceived">discoverCommandsReceived</a></li><li data-type="method" id="Cluster-readAttributes-nav"><a href="Cluster.html#readAttributes">readAttributes</a></li><li data-type="method" id="Cluster-readReportingConfiguration-nav"><a href="Cluster.html#readReportingConfiguration">readReportingConfiguration</a></li><li data-type="method" id="Cluster-writeAttributes-nav"><a href="Cluster.html#writeAttributes">writeAttributes</a></li></ul></li><li id="Endpoint-nav"><a href="Endpoint.html">Endpoint</a><ul class='methods'><li data-type="method" id="Endpoint-bind-nav"><a href="Endpoint.html#bind">bind</a></li><li data-type="method" id="Endpoint-getLogId-nav"><a href="Endpoint.html#getLogId">getLogId</a></li><li data-type="method" id="Endpoint-unbind-nav"><a href="Endpoint.html#unbind">unbind</a></li></ul></li><li id="Node-nav"><a href="ZCLNode.html">Node</a><ul class='methods'><li data-type="method" id="Node-getLogId-nav"><a href="ZCLNode.html#getLogId">getLogId</a></li></ul></li></ul><h3 id="global-nav">Global</h3><ul><li><a href="global.html#debug">debug</a></li></ul>
   </nav>
 
   <div id="main">
@@ -95,6 +95,7 @@
 const EventEmitter = require('events');
 
 let { debug } = require('./util');
+const { getLogId } = require('./util');
 
 debug = debug.extend('cluster');
 
@@ -396,6 +397,18 @@ class Cluster extends EventEmitter {
   }
 
   /**
+   * Returns log id string for this cluster.
+   * @returns {string}
+   */
+  get logId() {
+    let endpointId;
+    if (this._endpoint &amp;&amp; typeof this._endpoint._endpointId === 'number') {
+      endpointId = this._endpoint._endpointId;
+    }
+    return getLogId(endpointId, this.constructor.NAME, this.constructor.ID);
+  }
+
+  /**
    * Command which requests the remote cluster to report its generated commands. Generated
    * commands are commands which may be sent by the remote cluster.
    *
@@ -426,7 +439,7 @@ class Cluster extends EventEmitter {
       .pop() || {})
       .name || cId);
 
-    debug(this.constructor.NAME, 'discoverCommandsGenerated', res);
+    debug(this.logId, 'discoverCommandsGenerated', res);
     return res;
   }
 
@@ -460,7 +473,7 @@ class Cluster extends EventEmitter {
       .pop() || {})
       .name || cId);
 
-    debug('discoverCommandsReceived', res);
+    debug(this.logId, 'discoverCommandsReceived', res);
     return res;
   }
 
@@ -489,14 +502,14 @@ class Cluster extends EventEmitter {
     while (attrIds.size) {
       // Check if command should get manufacturerSpecific flag
       const manufacturerId = this._checkForManufacturerSpecificAttributes(Array.from(attrIds));
-      debug(this.constructor.NAME, 'read attributes', [...attrIds], manufacturerId ? `manufacturer specific id ${manufacturerId}` : '');
+      debug(this.logId, 'read attributes', [...attrIds], manufacturerId ? `manufacturer specific id ${manufacturerId}` : '');
 
       const { attributes } = await super.readAttributes({
         attributes: [...attrIds],
         manufacturerId,
       });
 
-      debug(this.constructor.NAME, 'read attributes result', { attributes });
+      debug(this.logId, 'read attributes result', { attributes });
       const result = this.constructor.attributeArrayStatusDataType.fromBuffer(attributes, 0);
       if (!result.length) break;
 
@@ -538,7 +551,7 @@ class Cluster extends EventEmitter {
     let data = Buffer.alloc(1024);
     data = data.slice(0, this.constructor.attributeArrayDataType.toBuffer(data, arr, 0));
 
-    debug(this.constructor.NAME, 'write attributes', attributes, manufacturerId ? `manufacturer specific id ${manufacturerId}` : '');
+    debug(this.logId, 'write attributes', attributes, manufacturerId ? `manufacturer specific id ${manufacturerId}` : '');
 
     return super.writeAttributes({ attributes: data, manufacturerId });
   }
@@ -585,11 +598,11 @@ class Cluster extends EventEmitter {
         Object.keys(attributes).map(n => this.constructor.attributes[n].id),
       );
 
-      debug(this.constructor.NAME, 'configure reporting', req, manufacturerId ? `manufacturer specific id ${manufacturerId}` : '');
+      debug(this.logId, 'configure reporting', req, manufacturerId ? `manufacturer specific id ${manufacturerId}` : '');
 
       const { reports } = await super.configureReporting({ reports: req, manufacturerId });
 
-      debug(this.constructor.NAME, 'configured reporting', reports);
+      debug(this.logId, 'configured reporting', reports);
       for (const result of reports) {
         if (result.status !== 'SUCCESS') {
           throw new Error(result.status);
@@ -656,7 +669,7 @@ class Cluster extends EventEmitter {
         }),
     );
 
-    debug(this.constructor.NAME, 'read reporting configuration', req, manufacturerId ? `manufacturer specific id ${manufacturerId}` : '');
+    debug(this.logId, 'read reporting configuration', req, manufacturerId ? `manufacturer specific id ${manufacturerId}` : '');
 
     // If a request has been constructed execute it
     if (req.length) {
@@ -665,7 +678,7 @@ class Cluster extends EventEmitter {
         attributes: req,
         manufacturerId,
       });
-      debug(this.constructor.NAME, 'read reporting configuration result', reports);
+      debug(this.logId, 'read reporting configuration result', reports);
 
       // Return the parsed reports
       return reports;
@@ -704,7 +717,7 @@ class Cluster extends EventEmitter {
         ? this.constructor.attributesById[attr.id].name
         : attr.id);
     }
-    debug(this.constructor.NAME, 'discover attributes', result);
+    debug(this.logId, 'discover attributes', result);
     return result;
   }
 
@@ -748,7 +761,7 @@ class Cluster extends EventEmitter {
       }
       result.push(discoveredAttribute);
     }
-    debug(this.constructor.NAME, 'discover attributes extended', result);
+    debug(this.logId, 'discover attributes extended', result);
     return result;
   }
 
@@ -786,7 +799,7 @@ class Cluster extends EventEmitter {
         ? command.args.fromBuffer(frame.data, 0)
         : undefined;
 
-      debug(this.constructor.NAME, 'received frame', command.name, args);
+      debug(this.logId, 'received frame', command.name, args);
 
       // Invoke the right handler
       const handler = this._trxHandlers[frame.trxSequenceNumber] || this[handlerName];
@@ -802,7 +815,7 @@ class Cluster extends EventEmitter {
       }
     }
 
-    debug(this.constructor.NAME, 'unknown command received:', frame, meta);
+    debug(this.logId, 'unknown command received:', frame, meta);
 
     throw new Error('unknown_command_received');
   }
@@ -825,7 +838,7 @@ class Cluster extends EventEmitter {
     } else {
       data = new ZCLMfgSpecificHeader(data);
     }
-    debug(this.constructor.NAME, 'send frame', data);
+    debug(this.logId, 'send frame', data);
     return this._endpoint.sendFrame(this.constructor.ID, data.toBuffer());
   }
 
@@ -861,7 +874,7 @@ class Cluster extends EventEmitter {
       .filter(cId => cId >= startValue);
 
     const result = cmds.slice(0, maxResults);
-    debug('onDiscoverCommandsGenerated', {
+    debug(this.logId, 'onDiscoverCommandsGenerated', {
       lastResponse: result.length === cmds.length,
       commandIds: result,
     });
@@ -889,7 +902,7 @@ class Cluster extends EventEmitter {
       .filter(cId => cId >= startValue);
 
     const result = cmds.slice(0, maxResults);
-    debug('onDiscoverCommandsReceived', {
+    debug(this.logId, 'onDiscoverCommandsReceived', {
       lastResponse: result.length === cmds.length,
       commandIds: result,
     });
@@ -1175,7 +1188,7 @@ class Cluster extends EventEmitter {
     // Show warning if a manufacturer specific attribute was found amongst non-manufacturer
     // specific attributes
     if (manufacturerIds.length > 0 &amp;&amp; attrIdsSet.size !== manufacturerIds.length) {
-      debug(this.constructor.NAME, 'WARNING expected only manufacturer specific attributes got:', manufacturerIds);
+      debug(this.logId, 'WARNING expected only manufacturer specific attributes got:', manufacturerIds);
     }
 
     // Return the manufacturerId that was found in the attributes
