deploy: aa5c185ad77b5c8aa8e1c39d77f4a24715e33503

--- a/lib_Cluster.js.html
+++ b/lib_Cluster.js.html
@@ -1099,7 +1099,7 @@ class Cluster extends EventEmitter {
     for (const cmdName in commands) {
       Object.defineProperty(proto, cmdName, {
         value: {
-          async [cmdName](args) {
+          async [cmdName](args, opts = {}) {
             const cmd = commands[cmdName];
             const payload = {
               cmdId: cmd.id,
@@ -1137,6 +1137,10 @@ class Cluster extends EventEmitter {
             }
 
             if (payload.frameControl &amp;&amp; payload.frameControl.includes('disableDefaultResponse')) {
+              return this.sendFrame(payload);
+            }
+
+            if (opts.waitForResponse === false) {
               return this.sendFrame(payload);
             }
 
