deploy: 1a555082bb7ece24de5335397772bc0b6c89d6ff

--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@ Specification (<a href="https://etc.athom.com/zigbee_cluster_specification.pdf">
 <h2>Usage</h2>
 <p>In order to communicate with a Zigbee node retrieve a <code>node</code> instance from <code>ManagerZigBee</code> and create a <code>ZCLNode</code> instance using that node. This step encapsulates the <code>node</code> with the Zigbee Clusters functionality and allows sending and receiving ZCL commands.</p>
 <h3>Basic communication with node</h3>
+<h2>Sending a command</h2>
 <p><code>/drivers/my-driver/device.js</code></p>
 <pre class="prettyprint source lang-js"><code>const Homey = require('homey');
 const { ZCLNode, CLUSTER } = require('zigbee-clusters');
@@ -127,9 +128,54 @@ class MyDevice extends Homey.Device {
           .then(async node => {
             // Create ZCLNode instance
             const zclNode = new ZCLNode(node);
+
+            // Send toggle command to onOff cluster on endpoint 1
             await zclNode.endpoints[1].clusters[CLUSTER.ON_OFF.NAME].toggle();
+
+            // Send moveToLevel command to levelControl cluster on endpoint 1 and don't wait for
+            // the default response confirmation.
+            await zclNode.endpoints[1].clusters[CLUSTER.LEVEL_CONTROL.NAME].moveToLevel({
+              level: 100,
+              transitionTime: 2000
+            }, {
+              // This is an optional flag that disables waiting for a default response from the
+              // receiving node as a confirmation that the command is received and executed.
+              // You should only use this flag if the device does not follow the
+              // Zigbee specification and refuses to send a default response.
+              waitForResponse: true,
+            });
           });
     }
+}
+</code></pre>
+<h2>Receiving an attribute report</h2>
+<p><code>/drivers/my-driver/device.js</code></p>
+<pre class="prettyprint source lang-js"><code>const Homey = require('homey');
+const { ZCLNode, CLUSTER } = require('zigbee-clusters');
+
+class MyDevice extends Homey.Device {
+  onInit() {
+    // Get ZigBeeNode instance from ManagerZigBee
+    this.homey.zigbee.getNode(this)
+      .then(async node => {
+        // Create ZCLNode instance
+        const zclNode = new ZCLNode(node);
+
+        // Configure reporting
+        await zclNode.endpoints[1].clusters[CLUSTER.COLOR_CONTROL.NAME].configureReporting({
+          currentSaturation: {
+            minInterval: 0,
+            maxInterval: 300,
+            minChange: 1
+          }
+        });
+
+        // And listen for incoming attribute reports by binding a listener on the cluster
+        zclNode.endpoints[1].clusters[CLUSTER.COLOR_CONTROL.NAME].on('attr.currentSaturation', (currentSaturation) => {
+          // handle reported attribute value
+        });
+      });
+  }
 }
 </code></pre>
 <h3>Implementing a cluster</h3>
